Add html elements to page and skeleton css file

--- a/huddle-landing-page-945317-master/index.html
+++ b/huddle-landing-page-945317-master/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="./css/styles.css">
   
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
@@ -15,55 +16,59 @@
   </style>
 </head>
 <body>
-
-  Try It Free
-
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Get Started For Free
-
-  Grow Together
-
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
-
+  <div class="top">
+    <img src="./images/logo.svg">
+    <button>Try It Free</button>
+    <h1>Build The Community Your Fans Will Love</h1>
+    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+    <button>Get Started For Free</button>
+    <img src="./images/illustration-mockups.svg">
+  </div>
+  <div class="sec">
+    <h2>Grow Together</h2>
+    <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+    <img src="./images/illustration-grow-together.svg">
+  </div>
+  <div class="sec">
+    <h2>Flowing Conversations</h2>
+    <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+    <img src="./images/illustration-flowing-conversation.svg">
+  </div>
+  <div class="sec">
+    <h2>Your Users</h2>
+    <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+    <img src="illustration-your-users.svg">
+  </div>
+  <div class=bottom>
+    <div class="cta-box">
+      <h1>Ready To Build Your Community?</h1>
+      <button>Get Started For Free</button>
+    </div>
+    <img src="./images/logo.svg">
+    <div class="info">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+      <p>+1-543-123-4567</p>
+      <p>example@huddle.com</p>
+    </div>
+    <div class="links">
+      <a>About Us</a>
+      <a>What We Do</a>
+      <a>FAQ</a>
+      <a>Career</a>
+      <a>Blog</a>
+      <a>Contact Us</a>
+    </div>
+    <div class="social">
+      <img src="">
+      <img src="">
+      <img src="">
+    </div>
+    &copy; Copyright 2018 Huddle. All rights reserved.
+  </div>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Quynh Nguyen</a>.
     </p>
   </footer>
 </body>
